Fixed overlay issue on IE 9,10,11 and Edge

--- a/wp-content/themes/simplegridtheme/style.css
+++ b/wp-content/themes/simplegridtheme/style.css
@@ -243,17 +243,17 @@ box-shadow: 2px 2px 5px 0px #ccc,0px 1px 0px rgba(204,204,204,.3) inset;*/ }
 .post_box_category a { font-size: 10px; font-weight: 100; float: right; color: #FFFFFF; padding: 10px; text-decoration: none; text-transform: uppercase; }
 
 /* Innovation */
-.category_id_innovation { background-color: #ff751a; mix-blend-mode: multiply;  height: 100%; }
+.category_id_innovation { background-color: #ff751a; mix-blend-mode: multiply;  height: 100%; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)"; }
 /* Customer Experience */
-.category_id_customer_experience { background-color: #3a4a58; mix-blend-mode: multiply; height: 100%; }
+.category_id_customer_experience { background-color: #3a4a58; mix-blend-mode: multiply; height: 100%; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)"; }
 /* sustainability */
-.category_id_sustainability { background-color: #44cc00; mix-blend-mode: multiply; height: 100%; }
+.category_id_sustainability { background-color: #44cc00; mix-blend-mode: multiply; height: 100%; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)"; }
 /* Leadership */
-.category_id_leadership { background-color: #8800cc; mix-blend-mode: multiply; height: 100%; }
+.category_id_leadership { background-color: #8800cc; mix-blend-mode: multiply; height: 100%; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)"; }
 /* Operations */
-.category_id_operations { background-color: #096fdc; mix-blend-mode: multiply; height: 100%; }
+.category_id_operations { background-color: #096fdc; mix-blend-mode: multiply; height: 100%; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)"; }
 /* Global Ideas */
-.category_id_global_ideas { background-color: #d18d09; mix-blend-mode: multiply; height: 100%; }
+.category_id_global_ideas { background-color: #d18d09; mix-blend-mode: multiply; height: 100%; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)"; }
 
 .search_column { float: left; }
 
@@ -675,6 +675,39 @@ div.wpcf7-response-output { margin: 2em 0em 1em!important; }
 	bottom: -1px;
 
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+/* Innovation */
+.category_id_innovation { opacity: 0.5; }
+/* Customer Experience */
+.category_id_customer_experience { opacity: 0.5; }
+/* sustainability */
+.category_id_sustainability { opacity: 0.5; }
+/* Leadership */
+.category_id_leadership { opacity: 0.5; }
+/* Operations */
+.category_id_operations { opacity: 0.5; }
+/* Global Ideas */
+.category_id_global_ideas { opacity: 0.5; }
+}
+
+@supports (-ms-ime-align:auto) {
+	.selector { property:value; }
+	.edu_input_field{ width:15.1% !important; }
+	/* Innovation */
+	.category_id_innovation { opacity: 0.5; }
+	/* Customer Experience */
+	.category_id_customer_experience { opacity: 0.5; }
+	/* sustainability */
+	.category_id_sustainability { opacity: 0.5; }
+	/* Leadership */
+	.category_id_leadership { opacity: 0.5; }
+	/* Operations */
+	.category_id_operations { opacity: 0.5; }
+	/* Global Ideas */
+	.category_id_global_ideas { opacity: 0.5; }
+}
+
 
 
 
